More work on Prohibitor